'对css进行兼容性处理'

--- a/src/css/index.less
+++ b/src/css/index.less
@@ -51,7 +51,8 @@
   width: 200px;
   margin-left: -200px;
   background: blue;
-
+  border-top-left-radius: 5px;
+  transform:rotate(-3deg); 
 }
 
 /* 圣杯布局 */
